language_tests/source_files/invalid/deref_generic_noncopy_from_borrow.tr
struct NoCopy {
    value: int32
}

func copyOut[T](_ x: &T) -> T {
    *x
}

func main() {
    let item = NoCopy { value: 1 }
    let _ = copyOut(&item)
}
